Updated color function and saved some outputs
Points are colored by the mean value of the values in the whole node

--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "neutral-auckland",
+   "id": "suspected-galaxy",
    "metadata": {},
    "source": [
     "### Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "athletic-number",
+   "execution_count": 4,
+   "id": "advised-letter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "orange-peninsula",
+   "id": "eight-marble",
    "metadata": {},
    "source": [
     "### Functions"
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "ordinary-diploma",
+   "execution_count": 47,
+   "id": "european-fraud",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
     "    \n",
     "    \n",
     "def mapper_pca_func(X,title,variables,color_variable=None,color_function_name=\"Distance to xmin\", \n",
-    "                    DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = 7, PERC_OVERLAP = .5, num_pca=1):\n",
+    "                    DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = 7, PERC_OVERLAP = .5, num_pca=1,no_visual=False):\n",
     "    \"\"\"\n",
     "    str(df_stratum_season_time_dict_list[1].keys())\n",
     "    \"\"\"\n",
@@ -145,18 +145,21 @@
     "    # Instantiate kepler mapper object\n",
     "    mapper = km.KeplerMapper(verbose=0)\n",
     "    \n",
+    "    X_scaled = RobustScaler().fit_transform(X)\n",
+    "    \n",
     "    # defining filter function as projection on to the first 2 component axis\n",
     "    pca = PCA(n_components=num_pca)\n",
-    "    lens = pca.fit_transform(X)\n",
+    "    lens = pca.fit_transform(X_scaled)\n",
     "    print(\"Variance explained: \",pca.explained_variance_ratio_)\n",
     "    \n",
     "    # Project data onto the ones we want to display\n",
     "    summary_variable = mapper.project(np.array(X),projection = projected_var_indices, scaler=None)\n",
     "    \n",
     "    # Generate the simplicial complex\n",
-    "    Y = RobustScaler().fit_transform(X)\n",
-    "    scomplex = mapper.map(lens, Y, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), clusterer=cluster_alg,remove_duplicate_nodes=True)  \n",
+    "    scomplex = mapper.map(lens, X_scaled, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), clusterer=cluster_alg,remove_duplicate_nodes=True)  \n",
     "\n",
+    "    if no_visual:\n",
+    "        return scomplex,X,X_scaled\n",
     "\n",
     "    pl_brewer = [[0.0, '#006837'],\n",
     "             [0.1, '#1a9850'],\n",
@@ -174,8 +177,15 @@
     "        color_values = lens [:,0] - lens[:,0].min()\n",
     "        \n",
     "    else:\n",
-    "        color_values = X[color_variable]\n",
-    "        \n",
+    "        #color_values = X[color_variable]\n",
+    "            # Change color values of that point to be the average tn value of all other points in the same node or nodes\n",
+    "        color_values = []\n",
+    "        for index,row in X.iterrows():\n",
+    "            color_values.append(get_color_val(index,X,scomplex,color_variable))\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    my_colorscale = pl_brewer\n",
     "    \n",
     "    kmgraph,  mapper_summary, colorf_distribution = get_mapper_graph(scomplex, \n",
@@ -212,10 +222,10 @@
     "    \n",
     "    #Update the fw_graph colorbar, setting its title:\n",
     "    fw_graph.data[1].marker.colorbar.title = 'dist to<br>x-min'\n",
-    "    html_output_path = directory_path + \"\\\\\" + title + 'PCA_1' + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\n",
+    "    html_output_path = directory_path + \"\\\\\" + title + 'PCA_'+str(num_pca) + 'all_var_' + 'Eps_' + str(DBSCAN_EPSILON) +'MinS_' + str(DBSCAN_MIN_SAMPLES) + 'NCUBES_' + str(N_CUBES) + 'PEROvLp_' + str(PERC_OVERLAP) + '.html'\n",
     "    html_output_path = html_output_path.replace(\":\",\"_\")\n",
     "    mapper.visualize(scomplex, path_html=html_output_path, color_values=color_values, color_function_name=color_function_name,lens=summary_variable,lens_names=projected_vars)\n",
-    "    return scomplex, X, Y\n",
+    "    return scomplex, X, X_scaled\n",
     "\n",
     "\n",
     "def getSubdf(scomplex, shape, df):\n",
@@ -223,7 +233,7 @@
     "    Returns the part of the data frame from the particular shape in the simplicial complex.\n",
     "    params:\n",
     "    scomplex: the entire simplicial complex\n",
-    "    shape: the particular shape being inspected (within the simplicial complex)\n",
+    "    shape: the particular shape being inspected (within the simplicial complex) list of node names\n",
     "    df: the entire data frame\n",
     "    \n",
     "    Description:\n",
@@ -596,12 +606,48 @@
     "    return float('inf')\n",
     "\n",
     "\n",
+    "def getNodesfromIndex(scomplex, index):\n",
+    "    \"\"\"\n",
+    "    docstring to write later\n",
+    "    \"\"\"\n",
+    "    result = set()\n",
+    "    nodes = scomplex['nodes']\n",
+    "    nodesList = list(scomplex['nodes'].keys())\n",
+    "    for node in nodesList:\n",
+    "        if index in nodes[node]:\n",
+    "            result.add(node)\n",
+    "    \n",
+    "    return list(result)\n",
+    "\n",
+    "\n",
+    "def get_color_val(index,df,scomplex,variable):\n",
+    "    \"\"\"\n",
+    "    Gets the new color value assignment for this row\n",
+    "    \"\"\"\n",
+    "    relevant_nodes = getNodesfromIndex(scomplex,index)\n",
+    "    \n",
+    "    #print(relevant_nodes)\n",
+    "    \n",
+    "    relevant_df = getSubdf(scomplex,relevant_nodes,df)\n",
+    "    \n",
+    "    colorval = relevant_df[variable].mean()\n",
+    "    \n",
+    "    return colorval\n",
+    "\n",
+    "def get_colorvals(variable,df,scomplex):\n",
+    "    colorvals = []\n",
+    "    \n",
+    "    for index,row in df.iterrows():\n",
+    "        colorvals.append(get_color_val(index,df,scomplex,variable))\n",
+    "    \n",
+    "    \n",
+    "\n",
     "print(\"Functions loaded\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "realistic-toddler",
+   "id": "numeric-robinson",
    "metadata": {},
    "source": [
     "### Load data"
@@ -609,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brief-aaron",
+   "id": "danish-hampshire",
    "metadata": {},
    "source": [
     "Run this cell to use Ambers Random Forrest interpolated dataset"
@@ -617,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "executive-hydrogen",
+   "execution_count": 42,
+   "id": "helpful-equilibrium",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +686,7 @@
        "(14200, 21)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,8 +712,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "eastern-compiler",
+   "execution_count": 43,
+   "id": "extensive-drilling",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +722,7 @@
        "(12446, 21)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "japanese-double",
+   "id": "attempted-fitness",
    "metadata": {},
    "source": [
     "Mapper output of all data"
@@ -696,8 +742,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "listed-martin",
+   "execution_count": 50,
+   "id": "independent-aging",
    "metadata": {},
    "outputs": [
     {
@@ -705,19 +751,19 @@
      "output_type": "stream",
      "text": [
       "X.shape:  12446\n",
-      "Variance explained:  [0.96908012 0.0208162 ]\n"
+      "Variance explained:  [0.54016953 0.16506445]\n"
      ]
     }
    ],
    "source": [
-    "title = \"Open_river_all_pca2_ncubes(60,60),perc40,min5,eps10-scaled\"\n",
-    "scomplex, X, Y = mapper_pca_func(water_data,title,nocond,color_variable = \"WDP\",\n",
-    "                              color_function_name = \"WDP\",N_CUBES=[60,60],PERC_OVERLAP=0.4,DBSCAN_MIN_SAMPLES = 5,DBSCAN_EPSILON=10,num_pca=2)"
+    "title = \"Open_river_all_scaled_TP\"\n",
+    "scomplex, X, X_scaled = mapper_pca_func(water_data,title,nocond,color_variable = \"TP\",\n",
+    "                              color_function_name = \"Total Phosphorous\",N_CUBES=[60,60],PERC_OVERLAP=0.4,DBSCAN_MIN_SAMPLES = 5,DBSCAN_EPSILON=10,num_pca=2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "effective-notion",
+   "id": "serial-jacket",
    "metadata": {},
    "source": [
     "Mapper output of summer data"
@@ -726,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "weird-dispatch",
+   "id": "useful-timber",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plain-league",
+   "id": "coated-ghana",
    "metadata": {},
    "source": [
     "### Playing with colors and kmapper objects"
@@ -758,14 +804,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "graduate-purchase",
+   "id": "trained-subscription",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "refined-cheese",
+   "id": "favorite-latvia",
    "metadata": {},
    "source": [
     "### Density state definitions"
@@ -774,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "coral-forty",
+   "id": "leading-beads",
    "metadata": {
     "scrolled": true
    },
@@ -1169,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "vocal-chrome",
+   "id": "sapphire-married",
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "coated-principle",
+   "id": "occasional-absence",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "governing-yugoslavia",
+   "id": "rubber-closer",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "retained-lecture",
+   "id": "strange-mountain",
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "engaging-absolute",
+   "id": "rural-avatar",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "thorough-taste",
+   "id": "southeast-appointment",
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "optical-guess",
+   "id": "separate-loading",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-pixel",
+   "id": "uniform-commissioner",
    "metadata": {},
    "source": [
     "Saving all outputs to json save scomplices and data"
@@ -1577,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "unauthorized-lingerie",
+   "id": "apart-acrylic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "studied-passport",
+   "id": "sophisticated-sterling",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -1600,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "choice-thriller",
+   "id": "obvious-selection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "august-access",
+   "id": "affecting-recorder",
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "global-missouri",
+   "id": "hollywood-klein",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -1642,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "initial-architecture",
+   "id": "provincial-amateur",
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "little-boutique",
+   "id": "contemporary-ukraine",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -1682,7 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "patent-student",
+   "id": "interested-reply",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "opening-siemens",
+   "id": "governing-console",
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "danish-tolerance",
+   "id": "psychological-parking",
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dried-basket",
+   "id": "invisible-conversation",
    "metadata": {},
    "outputs": [],
    "source": []
