Update Open River KMapper.ipynb

--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "suspected-galaxy",
+   "id": "sweet-stewart",
    "metadata": {},
    "source": [
     "### Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "advised-letter",
+   "id": "governing-there",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eight-marble",
+   "id": "precise-office",
    "metadata": {},
    "source": [
     "### Functions"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "european-fraud",
+   "id": "played-purple",
    "metadata": {},
    "outputs": [
     {
@@ -632,22 +632,12 @@
     "    \n",
     "    colorval = relevant_df[variable].mean()\n",
     "    \n",
-    "    return colorval\n",
-    "\n",
-    "def get_colorvals(variable,df,scomplex):\n",
-    "    colorvals = []\n",
-    "    \n",
-    "    for index,row in df.iterrows():\n",
-    "        colorvals.append(get_color_val(index,df,scomplex,variable))\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "print(\"Functions loaded\")"
+    "    return colorval\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-robinson",
+   "id": "australian-blues",
    "metadata": {},
    "source": [
     "### Load data"
@@ -655,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "danish-hampshire",
+   "id": "juvenile-connecticut",
    "metadata": {},
    "source": [
     "Run this cell to use Ambers Random Forrest interpolated dataset"
@@ -664,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "helpful-equilibrium",
+   "id": "junior-frederick",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "extensive-drilling",
+   "id": "empirical-burke",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attempted-fitness",
+   "id": "analyzed-spread",
    "metadata": {},
    "source": [
     "Mapper output of all data"
@@ -743,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "independent-aging",
+   "id": "grave-practitioner",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serial-jacket",
+   "id": "large-jungle",
    "metadata": {},
    "source": [
     "Mapper output of summer data"
@@ -772,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "useful-timber",
+   "id": "senior-penalty",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coated-ghana",
+   "id": "noted-nancy",
    "metadata": {},
    "source": [
     "### Playing with colors and kmapper objects"
@@ -804,14 +794,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "trained-subscription",
+   "id": "knowing-conditions",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "favorite-latvia",
+   "id": "dedicated-cedar",
    "metadata": {},
    "source": [
     "### Density state definitions"
@@ -820,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "leading-beads",
+   "id": "healthy-balance",
    "metadata": {
     "scrolled": true
    },
@@ -1215,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "sapphire-married",
+   "id": "documentary-banana",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "occasional-absence",
+   "id": "forward-democrat",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "rubber-closer",
+   "id": "practical-photographer",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "strange-mountain",
+   "id": "literary-young",
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "rural-avatar",
+   "id": "placed-tissue",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "southeast-appointment",
+   "id": "frozen-kitty",
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "separate-loading",
+   "id": "russian-productivity",
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-commissioner",
+   "id": "fluid-wedding",
    "metadata": {},
    "source": [
     "Saving all outputs to json save scomplices and data"
@@ -1623,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "apart-acrylic",
+   "id": "unique-hello",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sophisticated-sterling",
+   "id": "official-cabin",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -1646,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "obvious-selection",
+   "id": "elementary-agency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1649,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "affecting-recorder",
+   "id": "streaming-profit",
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollywood-klein",
+   "id": "configured-friendship",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -1688,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "provincial-amateur",
+   "id": "instructional-eagle",
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contemporary-ukraine",
+   "id": "sought-testing",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -1728,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "interested-reply",
+   "id": "curious-delaware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "governing-console",
+   "id": "cutting-burst",
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "psychological-parking",
+   "id": "tender-cricket",
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invisible-conversation",
+   "id": "proud-conversion",
    "metadata": {},
    "outputs": [],
    "source": []
