decade columns in kmapper

--- a/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
@@ -79,13 +79,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Standardize data"
+    "## Standardize data\n",
+    "\n",
+    "TODO - change this to robust scaling"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "continuous_variables = [\"TN\",\"TP\",\"TEMP\", \"DO\", \"TURB\", \"VEL\", \"SS\", \"WDP\", \"CHLcal\",  \"SECCHI\"]\n",
     "\n",
@@ -97,27 +99,31 @@
     "                                             \"SHEETBAR\", \"DATE\", \"LATTITUDE\",\"LONGITUDE\",\"FLDNUM\", \"STRATUM\",\"LOCATCD\",\n",
     "                                             \"YEAR\", \"SEASON\"])     "
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[0.7293103620606537 0.17890622994390762 0.8614521214419811 ... 9312103\n",
-      "  1993 2]\n",
-      " [1.3059564778575974 0.18547061979965557 0.8614521214419811 ... 9312002\n",
-      "  1993 2]\n",
-      " [0.7293103620606537 0.1263911110979239 0.8508479208593491 ... 9312102\n",
-      "  1993 2]\n",
-      " ...\n",
-      " [-0.7639588954591189 1.0585344706141337 -0.5807191577959548 ... 1363126\n",
-      "  2013 3]\n",
-      " [-0.6769297856917191 1.0585344706141337 -0.6973653642049055 ... 1363226\n",
-      "  2013 3]\n",
-      " [-0.7282706993674514 0.9994549619124021 -0.6072296592525345 ... 1363108\n",
-      "  2013 3]]\n"
-     ]
-    }
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Make 'DECADE' column"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "water_df.apply\n",
+    "\n",
+    "\n",
+    "for index, row in water_df.iterrows():\n",
+    "    water_df['93-00'] = np.where((water_df['YEAR'] <= 2000), 1, 0)\n",
+    "    water_df['98-04'] = np.where(('YEAR' >= 1998) & ('YEAR' <= 2004), 1, 0)\n",
+    "    water_df['01-13'] = np.where(('YEAR' >= 2001) & ('YEAR' <= 2013), 1, 0)\n",
+    "    water_df['10-16'] = np.where(('YEAR' >= 2010) & ('YEAR' <= 2016), 1, 0)\n",
+    "    water_df['14-20'] = np.where(('YEAR' >= 2014), 1, 0)"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -606,10 +612,10 @@
    "cell_type": "code",
    "execution_count": 48,
    "source": [
-    "    \"\"\"\n",
-    "    - coloring portion of the code - used primarily for the HTML outputs, not plotlyvis\n",
-    "    - to change the coloring, make sure color_vals, color_names, and plot title is changed\n",
-    "    \"\"\"\n",
+    "\"\"\"\n",
+    "- coloring portion of the code - used primarily for the HTML outputs, not plotlyvis\n",
+    "- to change the coloring, make sure color_vals, color_names, and plot title is changed\n",
+    "\"\"\"\n",
     "    \n",
     "summary_variable = mapper.project(np.array(X), projection = projected_var_indices, scaler = None)\n",
     "\n",
