--- a/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
@@ -118,10 +118,10 @@
     "\n",
     "for index, row in water_df.iterrows():\n",
     "    water_df['93-00'] = np.where((water_df['YEAR'] <= 2000), 1, 0)\n",
-    "    water_df['98-04'] = np.where(('YEAR' >= 1998) & ('YEAR' <= 2004), 1, 0)\n",
-    "    water_df['01-13'] = np.where(('YEAR' >= 2001) & ('YEAR' <= 2013), 1, 0)\n",
-    "    water_df['10-16'] = np.where(('YEAR' >= 2010) & ('YEAR' <= 2016), 1, 0)\n",
-    "    water_df['14-20'] = np.where(('YEAR' >= 2014), 1, 0)"
+    "    water_df['98-04'] = np.where((water_df['YEAR' >= 1998]) & (water_df['YEAR'] <= 2004), 1, 0)\n",
+    "    water_df['01-13'] = np.where((water_df['YEAR'] >= 2001) & (water_df['YEAR'] <= 2013), 1, 0)\n",
+    "    water_df['10-16'] = np.where((water_df['YEAR'] >= 2010) & (water_df['YEAR'] <= 2016), 1, 0)\n",
+    "    water_df['14-20'] = np.where((water_df['YEAR'] >= 2014), 1, 0)"
    ],
    "outputs": [],
    "metadata": {}
