no major changes

--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sweet-stewart",
+   "id": "suited-feature",
    "metadata": {},
    "source": [
     "### Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "governing-there",
+   "id": "prospective-efficiency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precise-office",
+   "id": "contemporary-novelty",
    "metadata": {},
    "source": [
     "### Functions"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "played-purple",
+   "id": "applied-attribute",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-blues",
+   "id": "patent-working",
    "metadata": {},
    "source": [
     "### Load data"
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "juvenile-connecticut",
+   "id": "french-strengthening",
    "metadata": {},
    "source": [
     "Run this cell to use Ambers Random Forrest interpolated dataset"
@@ -653,8 +653,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "junior-frederick",
+   "execution_count": 51,
+   "id": "inclusive-width",
    "metadata": {},
    "outputs": [
     {
@@ -673,10 +673,10 @@
     {
      "data": {
       "text/plain": [
-       "(14200, 21)"
+       "(82481, 21)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,24 +695,24 @@
     "water_data[\"SEASON\"] = water_data[\"MONTH\"]\n",
     "water_data = water_data.replace({\"SEASON\":seasons})\n",
     "print(\"Filtering by pool\")\n",
-    "water_data = water_data[water_data[\"FLDNUM\"]==\"Jackson, MO\"].reset_index(drop=True)\n",
+    "#water_data = water_data[water_data[\"FLDNUM\"]==\"Jackson, MO\"].reset_index(drop=True)\n",
     "print(water_data.columns)\n",
     "water_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "empirical-burke",
+   "execution_count": 52,
+   "id": "whole-gregory",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12446, 21)"
+       "(76698, 21)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "analyzed-spread",
+   "id": "described-reminder",
    "metadata": {},
    "source": [
     "Mapper output of all data"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "grave-practitioner",
+   "id": "arranged-belgium",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "large-jungle",
+   "id": "athletic-netherlands",
    "metadata": {},
    "source": [
     "Mapper output of summer data"
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "senior-penalty",
+   "id": "heard-setup",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noted-nancy",
+   "id": "thermal-recognition",
    "metadata": {},
    "source": [
     "### Playing with colors and kmapper objects"
@@ -794,14 +794,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "knowing-conditions",
+   "id": "adverse-nomination",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "dedicated-cedar",
+   "id": "pressing-humanitarian",
    "metadata": {},
    "source": [
     "### Density state definitions"
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "healthy-balance",
+   "id": "elect-rogers",
    "metadata": {
     "scrolled": true
    },
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "documentary-banana",
+   "id": "advance-idaho",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "forward-democrat",
+   "id": "special-telescope",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "practical-photographer",
+   "id": "affecting-employment",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "literary-young",
+   "id": "pressed-marathon",
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "placed-tissue",
+   "id": "endangered-oxide",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "frozen-kitty",
+   "id": "liked-retreat",
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "russian-productivity",
+   "id": "individual-apple",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-wedding",
+   "id": "alleged-millennium",
    "metadata": {},
    "source": [
     "Saving all outputs to json save scomplices and data"
@@ -1613,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "unique-hello",
+   "id": "previous-things",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "official-cabin",
+   "id": "appreciated-forth",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "elementary-agency",
+   "id": "suitable-latest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1649,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "streaming-profit",
+   "id": "pacific-companion",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "configured-friendship",
+   "id": "through-hazard",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -1678,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "instructional-eagle",
+   "id": "seasonal-career",
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sought-testing",
+   "id": "sharp-metallic",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -1718,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "curious-delaware",
+   "id": "noticed-velvet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "cutting-burst",
+   "id": "middle-absolute",
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "tender-cricket",
+   "id": "direct-preference",
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proud-conversion",
+   "id": "acquired-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": []
