updated epsilon testing

--- a/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
@@ -58,6 +58,39 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# STUFF TO ADD\n",
+    "\"\"\"\n",
+    "\n",
+    "def get_color_val(index,df,scomplex,variable):\n",
+    "\n",
+    "    relevant_nodes = getNodesfromIndex(scomplex,index)\n",
+    "    \n",
+    "    #print(relevant_nodes)\n",
+    "    \n",
+    "    relevant_df = getSubdf(scomplex,relevant_nodes,df)\n",
+    "    \n",
+    "    colorval = relevant_df[variable].mean()\n",
+    "    \n",
+    "    return colorval\n",
+    "\n",
+    "\n",
+    "\n",
+    "   else:\n",
+    "        #color_values = X[color_variable]\n",
+    "            # Change color values of that point to be the average tn value of all other points in the same node or nodes\n",
+    "        color_values = []\n",
+    "        for index,row in X.iterrows():\n",
+    "            color_values.append(get_color_val(index,X,scomplex,color_variable))\n",
+    "\n",
+    "\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Upload data"
@@ -79,9 +112,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Standardize data\n",
-    "\n",
-    "TODO - change this to robust scaling"
+    "## Robust Scaling"
    ],
    "metadata": {}
   },
@@ -91,7 +122,7 @@
    "source": [
     "continuous_variables = [\"TN\",\"TP\",\"TEMP\", \"DO\", \"TURB\", \"VEL\", \"SS\", \"WDP\", \"CHLcal\",  \"SECCHI\"]\n",
     "\n",
-    "ct = ColumnTransformer([('somename', StandardScaler(), continuous_variables)], remainder = 'passthrough')\n",
+    "ct = ColumnTransformer([('somename', RobustScaler(), continuous_variables)], remainder = 'passthrough')\n",
     "\n",
     "water_df = ct.fit_transform(water20)\n",
     "\n",
@@ -113,9 +144,6 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "water_df.apply\n",
-    "\n",
-    "\n",
     "for index, row in water_df.iterrows():\n",
     "    water_df['93-00'] = np.where((water_df['YEAR'] <= 2000), 1, 0)\n",
     "    water_df['98-04'] = np.where((water_df['YEAR' >= 1998]) & (water_df['YEAR'] <= 2004), 1, 0)\n",
@@ -137,13 +165,11 @@
    "cell_type": "code",
    "execution_count": 40,
    "source": [
-    "to_dummy_list = ['STRATUM', 'FLDNUM', 'YEAR']\n",
+    "to_dummy_vars = ['STRATUM', 'FLDNUM']\n",
     "\n",
-    "for var in to_dummy_list:\n",
+    "for var in to_dummy_vars:\n",
     "    temp = pd.get_dummies(water_df[var])\n",
-    "    water_df = pd.concat([water_df, temp], axis = 1)\n",
-    "    \n",
-    "    "
+    "    water_df = pd.concat([water_df, temp], axis = 1)"
    ],
    "outputs": [],
    "metadata": {}
@@ -416,7 +442,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Runnding kmapper with several combinations of parameters"
+    "## Running kmapper with several combinations of parameters"
    ],
    "metadata": {}
   },
@@ -615,7 +641,7 @@
     "\"\"\"\n",
     "- coloring portion of the code - used primarily for the HTML outputs, not plotlyvis\n",
     "- to change the coloring, make sure color_vals, color_names, and plot title is changed\n",
-    "\"\"\"\n",
+    "\n",
     "    \n",
     "summary_variable = mapper.project(np.array(X), projection = projected_var_indices, scaler = None)\n",
     "\n",
@@ -631,11 +657,11 @@
     "\n",
     "#plotly_graph_data = plotly_graph(kmgraph, graph_layout = 'fr', factor_size = 2.5, edge_linewidth = 0.5)\n",
     "\n",
-    "    \"\"\"\n",
+    "\"\"\"\n",
     "    layout = plot_layout(title = 'LTRM DATA',  \n",
     "                        width = 620, height = 570,\n",
     "                        annotation_text = get_kmgraph_meta(mapper_summary))\n",
-    "    \"\"\"\n",
+    "\n",
     "\n",
     "html_output_path = 'DBSCAN_NON_STANDARDIZED_CONTINUOUS_VARS.html'\n",
     "    \n",
