updated epsilon selection and kmapper

--- a/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
+++ b/pools_specific_EDA/Upper Pool 4/alaina_kmapper.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "source": [
     "import kmapper as km\n",
     "from kmapper.plotlyviz import *\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "source": [
     "import pandas as pd\n",
     "water20 = pd.read_csv(\"../../LTRM data/RF interpolation/water_full.csv\")\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "continuous_variables = [\"TN\",\"TP\",\"TEMP\", \"DO\", \"TURB\", \"VEL\", \"SS\", \"WDP\", \"CHLcal\",  \"SECCHI\"]\n",
     "\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "source": [
     "to_dummy_vars = ['STRATUM', 'FLDNUM']\n",
     "\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "source": [
     "def mapper_func_hdb(df, HDB_MIN_CLUSTER = 45, HDB_MIN_SAMP = 10, \n",
     "                    N_CUBES = [10,10], PERC_OVERLAP = [.25,.25], draw_bool = True):\n",
@@ -387,8 +387,8 @@
     "                [0.9, '#d73027'],\n",
     "                [1.0, '#a50026']]\n",
     "\n",
-    "        color_function_name = [\"FLDNUM\"]\n",
-    "        color_values = df['YEAR']\n",
+    "        color_function_name = [\"TN\"]\n",
+    "        color_values = df['TN']\n",
     "        #color_values = lens [:,0] - lens[:,0].min() # X['PREDICTED_TP]\n",
     "        #color_values = X['TURB']\n",
     "        my_colorscale = pl_brewer\n",
@@ -435,6 +435,15 @@
     "                        path_html = html_output_path, lens = summary_variable, lens_names = continuous_variables)\n",
     "        \n",
     "    return scomplex, X"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "test, X_test = mapper_func(water_df, DBSCAN_EPSILON = 1.2, DBSCAN_MIN_SAMPLES = 20, N_CUBES = [125, 125], PERC_OVERLAP = [.4, .4], draw_bool = True)"
    ],
    "outputs": [],
    "metadata": {}
