--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "suited-feature",
+   "id": "powerful-munich",
    "metadata": {},
    "source": [
     "### Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "prospective-efficiency",
+   "id": "blond-january",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contemporary-novelty",
+   "id": "identical-packaging",
    "metadata": {},
    "source": [
     "### Functions"
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "applied-attribute",
+   "execution_count": 61,
+   "id": "statistical-negative",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
     "    summary_variable = mapper.project(np.array(X),projection = projected_var_indices, scaler=None)\n",
     "    \n",
     "    # Generate the simplicial complex\n",
-    "    scomplex = mapper.map(lens, X_scaled, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), clusterer=cluster_alg,remove_duplicate_nodes=True)  \n",
+    "    scomplex = mapper.map(lens, X_scaled, cover=km.Cover(n_cubes=N_CUBES, perc_overlap=PERC_OVERLAP), clusterer=cluster_alg,remove_duplicate_nodes=True,scaler = RobustScaler())  \n",
     "\n",
     "    if no_visual:\n",
     "        return scomplex,X,X_scaled\n",
@@ -632,12 +632,14 @@
     "    \n",
     "    colorval = relevant_df[variable].mean()\n",
     "    \n",
-    "    return colorval\n"
+    "    return colorval\n",
+    "\n",
+    "print(\"Functions loaded\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "patent-working",
+   "id": "liked-airplane",
    "metadata": {},
    "source": [
     "### Load data"
@@ -645,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "french-strengthening",
+   "id": "pleased-rochester",
    "metadata": {},
    "source": [
     "Run this cell to use Ambers Random Forrest interpolated dataset"
@@ -653,8 +655,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "inclusive-width",
+   "execution_count": 62,
+   "id": "charming-mention",
    "metadata": {},
    "outputs": [
     {
@@ -673,10 +675,10 @@
     {
      "data": {
       "text/plain": [
-       "(82481, 21)"
+       "(14200, 21)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,24 +697,24 @@
     "water_data[\"SEASON\"] = water_data[\"MONTH\"]\n",
     "water_data = water_data.replace({\"SEASON\":seasons})\n",
     "print(\"Filtering by pool\")\n",
-    "#water_data = water_data[water_data[\"FLDNUM\"]==\"Jackson, MO\"].reset_index(drop=True)\n",
+    "water_data = water_data[water_data[\"FLDNUM\"]==\"Jackson, MO\"].reset_index(drop=True)\n",
     "print(water_data.columns)\n",
     "water_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "whole-gregory",
+   "execution_count": 63,
+   "id": "empty-matter",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(76698, 21)"
+       "(12446, 21)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "described-reminder",
+   "id": "acute-marks",
    "metadata": {},
    "source": [
     "Mapper output of all data"
@@ -732,8 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "arranged-belgium",
+   "execution_count": 64,
+   "id": "earlier-psychiatry",
    "metadata": {},
    "outputs": [
     {
@@ -743,17 +745,29 @@
       "X.shape:  12446\n",
       "Variance explained:  [0.54016953 0.16506445]\n"
      ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "map() got an unexpected keyword argument 'scaler'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-64-1a677801ece0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"test\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m scomplex, X, X_scaled = mapper_pca_func(water_data,title,nocond,color_variable = \"TURB\",\n\u001b[0m\u001b[0;32m      3\u001b[0m                               color_function_name = \"Turbidity\",N_CUBES=[10,10],PERC_OVERLAP=0.3,DBSCAN_MIN_SAMPLES = 5,DBSCAN_EPSILON=1,num_pca=2)\n",
+      "\u001b[1;32m<ipython-input-61-50b6581c74f4>\u001b[0m in \u001b[0;36mmapper_pca_func\u001b[1;34m(X, title, variables, color_variable, color_function_name, DBSCAN_EPSILON, DBSCAN_MIN_SAMPLES, N_CUBES, PERC_OVERLAP, num_pca, no_visual)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m     \u001b[1;31m# Generate the simplicial complex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 94\u001b[1;33m     \u001b[0mscomplex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmapper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlens\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_scaled\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcover\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCover\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_cubes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mN_CUBES\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mperc_overlap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mPERC_OVERLAP\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclusterer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcluster_alg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mremove_duplicate_nodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mscaler\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRobustScaler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     95\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mno_visual\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: map() got an unexpected keyword argument 'scaler'"
+     ]
     }
    ],
    "source": [
-    "title = \"Open_river_all_scaled_TP\"\n",
-    "scomplex, X, X_scaled = mapper_pca_func(water_data,title,nocond,color_variable = \"TP\",\n",
-    "                              color_function_name = \"Total Phosphorous\",N_CUBES=[60,60],PERC_OVERLAP=0.4,DBSCAN_MIN_SAMPLES = 5,DBSCAN_EPSILON=10,num_pca=2)"
+    "title = \"test\"\n",
+    "scomplex, X, X_scaled = mapper_pca_func(water_data,title,nocond,color_variable = \"TURB\",\n",
+    "                              color_function_name = \"Turbidity\",N_CUBES=[10,10],PERC_OVERLAP=0.3,DBSCAN_MIN_SAMPLES = 5,DBSCAN_EPSILON=1,num_pca=2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "athletic-netherlands",
+   "id": "tribal-basics",
    "metadata": {},
    "source": [
     "Mapper output of summer data"
@@ -762,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "heard-setup",
+   "id": "seasonal-scale",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thermal-recognition",
+   "id": "comic-caution",
    "metadata": {},
    "source": [
     "### Playing with colors and kmapper objects"
@@ -794,14 +808,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adverse-nomination",
+   "id": "material-penguin",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "pressing-humanitarian",
+   "id": "third-nickname",
    "metadata": {},
    "source": [
     "### Density state definitions"
@@ -810,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "elect-rogers",
+   "id": "vertical-chair",
    "metadata": {
     "scrolled": true
    },
@@ -1205,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "advance-idaho",
+   "id": "conditional-assembly",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "special-telescope",
+   "id": "protecting-century",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "affecting-employment",
+   "id": "simplified-april",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "pressed-marathon",
+   "id": "exempt-tucson",
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "endangered-oxide",
+   "id": "announced-tunnel",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "liked-retreat",
+   "id": "cordless-tract",
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "individual-apple",
+   "id": "infrared-rover",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alleged-millennium",
+   "id": "dated-internship",
    "metadata": {},
    "source": [
     "Saving all outputs to json save scomplices and data"
@@ -1613,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "previous-things",
+   "id": "awful-miller",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appreciated-forth",
+   "id": "working-vector",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -1636,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "suitable-latest",
+   "id": "yellow-summer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "pacific-companion",
+   "id": "under-agency",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-hazard",
+   "id": "personalized-provision",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -1678,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "seasonal-career",
+   "id": "solar-donna",
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-metallic",
+   "id": "molecular-emerald",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -1718,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "noticed-velvet",
+   "id": "contrary-stage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "middle-absolute",
+   "id": "million-terror",
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "direct-preference",
+   "id": "false-logistics",
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acquired-vocabulary",
+   "id": "norwegian-perspective",
    "metadata": {},
    "outputs": [],
    "source": []
